--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.clasemovil.horoscope"
+        applicationId "com.clasemovil.sorting"
         minSdk 21
         targetSdk 31
         versionCode 1
